--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 </head>
 <body>
   <div align="center">
-    <h1>PANKAJ Congratulations you did it</h1>
-    <h2>This application was deployed using AWS CodeDeploy yes.</h2>
+    <h1> pankaj Congratulations you did it</h1>
+    <h2>This application was deployed using AWS CodeDeploy yes ..</h2>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
 </body>
